...
              activeIcon: const Icon(Icons.home),
              label: l10n?.home ?? 'Inicio',
            ),
            BottomNavigationBarItem(
              icon: const Icon(Icons.search),
              activeIcon: const Icon(Icons.saved_search),
              label: l10n?.search ?? 'Búsqueda',
            ),
            BottomNavigationBarItem(
              icon: const Icon(Icons.map_outlined),
              activeIcon: const Icon(Icons.map),
              label: l10n?.map ?? 'Mapa',
            ),
...
